// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "type": "filter",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Array [
                        1,
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        "foo | 1 | 11",
                      ],
                    },
                    "group": "cmd",
                    "type": "update",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "reduce": [Function],
                            },
                            "group": "cmd",
                            "type": "compute",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "type": "filter",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "type": "filter",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Array [
                                    2,
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    12,
                                  ],
                                },
                                "group": "cmd",
                                "type": "update",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "type": "multi",
                },
              ],
              "group": "step",
              "type": "seq",
            },
          ],
          "group": "step",
          "type": "seq",
        },
        Object {
          "data": Object {
            "data": Object {
              "runner": [Function],
            },
            "group": "cmd",
            "type": "run",
          },
          "group": "step",
          "type": "single",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: bar seq 2`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "type": "filter",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Array [
                        1,
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        "foo | 1 | 11",
                      ],
                    },
                    "group": "cmd",
                    "type": "update",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "reduce": [Function],
                            },
                            "group": "cmd",
                            "type": "compute",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "type": "filter",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "type": "filter",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Array [
                                    2,
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    12,
                                  ],
                                },
                                "group": "cmd",
                                "type": "update",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "type": "multi",
                },
              ],
              "group": "step",
              "type": "seq",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: foo seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo",
          "subtype": "event",
        },
        "group": "cmd",
        "type": "emit",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fullName": "foo → *",
                      "subtype": "event",
                    },
                    "group": "cmd",
                    "type": "emit",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "reduce": [Function],
                            },
                            "group": "cmd",
                            "type": "compute",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "filter": [Function],
                            },
                            "group": "cmd",
                            "type": "filter",
                          },
                          "group": "step",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "filter": [Function],
                                },
                                "group": "cmd",
                                "type": "filter",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Array [
                                    1,
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    "foo | 1 | 11",
                                  ],
                                },
                                "group": "cmd",
                                "type": "update",
                              },
                              "group": "step",
                              "type": "single",
                            },
                            Object {
                              "data": Array [
                                Object {
                                  "data": Array [
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "reduce": [Function],
                                        },
                                        "group": "cmd",
                                        "type": "compute",
                                      },
                                      "group": "step",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "filter": [Function],
                                        },
                                        "group": "cmd",
                                        "type": "filter",
                                      },
                                      "group": "step",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Array [
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "filter": [Function],
                                            },
                                            "group": "cmd",
                                            "type": "filter",
                                          },
                                          "group": "step",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "store": Array [
                                                2,
                                                [Function],
                                                [Function],
                                                [Function],
                                                [Function],
                                                12,
                                              ],
                                            },
                                            "group": "cmd",
                                            "type": "update",
                                          },
                                          "group": "step",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Array [],
                                          "group": "step",
                                          "type": "multi",
                                        },
                                      ],
                                      "group": "step",
                                      "type": "seq",
                                    },
                                  ],
                                  "group": "step",
                                  "type": "seq",
                                },
                              ],
                              "group": "step",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "type": "seq",
                        },
                      ],
                      "group": "step",
                      "type": "seq",
                    },
                    Object {
                      "data": Object {
                        "data": Object {
                          "runner": [Function],
                        },
                        "group": "cmd",
                        "type": "run",
                      },
                      "group": "step",
                      "type": "single",
                    },
                  ],
                  "group": "step",
                  "type": "multi",
                },
              ],
              "group": "step",
              "type": "seq",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"foo → *\\"
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              \\"store\\": [
                1,
                null,
                null,
                null,
                null,
                \\"foo | 1 | 11\\"
              ]
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       \\"store\\": [
                         2,
                         null,
                         null,
                         null,
                         null,
                         12
                       ]
                    }},
                    3. [(empty list)]
                 ]
              ]
           ]
        ]
     ],
     *  run {{}}
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"foo → *\\"
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              \\"store\\": [
                1,
                null,
                null,
                null,
                null,
                \\"foo | 1 | 11\\"
              ]
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       \\"store\\": [
                         2,
                         null,
                         null,
                         null,
                         null,
                         12
                       ]
                    }},
                    3. [(empty list)]
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"foo\\"
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. Seq [
           1. emit {{
              \\"subtype\\": \\"event\\",
              \\"fullName\\": \\"foo → *\\"
           }},
           2. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       \\"store\\": [
                         1,
                         null,
                         null,
                         null,
                         null,
                         \\"foo | 1 | 11 | 101\\"
                       ]
                    }},
                    3. [
                       *  Seq [
                          1. compute {{}},
                          2. filter {{}},
                          3. Seq [
                             1. filter {{}},
                             2. update {{
                                \\"store\\": [
                                  2,
                                  null,
                                  null,
                                  null,
                                  null,
                                  18
                                ]
                             }},
                             3. [(empty list)]
                          ]
                       ]
                    ]
                 ]
              ]
           ]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     \\"store\\": [
       1,
       null,
       null,
       null,
       null,
       \\"foo | 1 | 11 | 101\\"
     ]
  }},
  3. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              \\"store\\": [
                2,
                null,
                null,
                null,
                null,
                18
              ]
           }},
           3. [(empty list)]
        ]
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     \\"store\\": [
       2,
       null,
       null,
       null,
       null,
       18
     ]
  }},
  3. [(empty list)]
]"
`;

exports[`graphite: store1 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "type": "filter",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            1,
            [Function],
            [Function],
            [Function],
            [Function],
            "foo | 1 | 11 | 101",
          ],
        },
        "group": "cmd",
        "type": "update",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "reduce": [Function],
                },
                "group": "cmd",
                "type": "compute",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "filter": [Function],
                },
                "group": "cmd",
                "type": "filter",
              },
              "group": "step",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "filter": [Function],
                    },
                    "group": "cmd",
                    "type": "filter",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Array [
                        2,
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        18,
                      ],
                    },
                    "group": "cmd",
                    "type": "update",
                  },
                  "group": "step",
                  "type": "single",
                },
                Object {
                  "data": Array [],
                  "group": "step",
                  "type": "multi",
                },
              ],
              "group": "step",
              "type": "seq",
            },
          ],
          "group": "step",
          "type": "seq",
        },
      ],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`graphite: store2 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "filter": [Function],
        },
        "group": "cmd",
        "type": "filter",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Array [
            2,
            [Function],
            [Function],
            [Function],
            [Function],
            18,
          ],
        },
        "group": "cmd",
        "type": "update",
      },
      "group": "step",
      "type": "single",
    },
    Object {
      "data": Array [],
      "group": "step",
      "type": "multi",
    },
  ],
  "group": "step",
  "type": "seq",
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"foo\\"
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              \\"store\\": [
                3,
                null,
                null,
                null,
                null,
                3
              ]
           }},
           3. [
              *  run {{}}
           ]
        ]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     \\"store\\": [
       6,
       null,
       null,
       null,
       null,
       3
     ]
  }},
  3. [
     *  run {{}}
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     \\"store\\": [
       3,
       null,
       null,
       null,
       null,
       3
     ]
  }},
  3. [
     *  run {{}}
  ]
]"
`;
